// Copyright 2018 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = 'proto3';
package api;
option go_package = "internal/future/pb";

import 'api/messages.proto';

message RunRequest {
  // The MatchProfile that describes the Match that this MatchFunction needs to generate proposals for.
  messages.MatchProfile profile = 1;
}

message RunResponse {
  // The proposal generated by this MatchFunction Run.
  messages.Match proposal = 1;
}

// This proto defines the API for running Match Functions as long-lived, 'serving' functions.
service MatchFunction {
  // This is the function that is executed when by the Open Match backend to generate Match proposals.
  rpc Run(RunRequest) returns (stream RunResponse) {
  }
}
